# todo-cli

./: .gitignore  README.md  pyproject.toml  todo-cli.py
tests/: test_datamodels.py  test_db.py  test_todo_cli.py
todo/: todo_cli.py
todo_cli/: datamodels.py  db.py  todo_cli.py
todo_cli/utils/: json_encoder.py  log.py
