[tool.poetry]
name = "todo-cli"
version = "0.3.0"
description = "CLI app to track a todo list"
authors = ["NimbusNiles <29178202+NimbusNiles@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.0"
sqlalchemy = "^2.0.30"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
todo = "todo_cli.todo_cli:main"